# vo2max-tracker

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  run_linux.sh  run_mac.sh  run_win.ps1
scripts/: tools.py
tests/: test_decoder.py  test_reader.py  util.py
tests/activities/: cycling_indoor_fr945.fit  cycling_outdoor_fr920.FIT  cycling_outdoor_fr945.fit  invalid.fit  running_fr945.fit  swimming_fr945.fit
vo2max_tracker/: __init__.py  config.py  main.py  version.py
vo2max_tracker/core/: chart.py  config.py  export.py
vo2max_tracker/fit/: decoder.py  errors.py  provider.py  reader.py
